@@ -1,7 +1,5 @@
 package edu.dio.deploy.infra.exception;
 
-import java.util.stream.Collectors;
-
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.converter.HttpMessageNotReadableException;
@@ -31,7 +29,7 @@ public class TratamentoDeExcecao {
         		.body(erros
         				.stream()
         				.map(DadosErroValidacao::new)
-        				.collect(Collectors.toList()));
+        				.toList());
     }
 	
 	@ExceptionHandler(HttpMessageNotReadableException.class)
